crates/aes_compiler/src/snapshots/aes_compiler__export__tests__actors__single_direct_actor.snap
---
source: crates/aes_compiler/src/export.rs
expression: "schema.types[1].relations[0].actors"
---
[
    ActorType {
        actor: Some(
            Direct(
                "user",
            ),
        ),
    },
]
