crates/aes_compiler/src/snapshots/aes_compiler__export__tests__actors__union_of_direct_actors.snap
---
source: crates/aes_compiler/src/export.rs
expression: "schema.types[2].relations[0].actors"
---
[
    ActorType {
        actor: Some(
            Direct(
                "user",
            ),
        ),
    },
    ActorType {
        actor: Some(
            Direct(
                "group",
            ),
        ),
    },
]
